# mandag-rs

./: Cargo.toml  README.md  expand.rs
mandag/: Cargo.toml
mandag-core/: Cargo.toml
mandag-core/examples/: handler.rs
mandag-core/src/: app.rs  error.rs  extension.rs  from_body.rs  from_request.rs  handler.rs  handler_service.rs  lib.rs  module.rs  plugin.rs  request_ext.rs  types.rs
mandag-core/src/body/: impls.rs  mod.rs  types.rs
mandag-core/src/req/: from_request.rs  impls.rs  mod.rs  types.rs
mandag-core/src/router/: into_routes.rs  mod.rs  route.rs  router.rs  routing.rs
mandag-macros/: Cargo.toml
mandag-macros/src/: handle.rs  lib.rs  module_impl.rs  route.rs  segments.rs  shared.rs  utils.rs
mandag-serve/: Cargo.toml
mandag-serve/src/: lib.rs
mandag-statics/: Cargo.toml
mandag-tera/: Cargo.toml
mandag-tera/src/: lib.rs
mandag/examples/: macros.rs  mandag.rs
mandag/examples/todo/: config.json  main.rs  store.rs
mandag/examples/todo/templates/: form.html  index.html
mandag/src/: app.rs  core.rs  core_service.rs  extension.rs  from_request.rs  lib.rs  module.rs  request_ext.rs  store.rs  types.rs
mandag/src/phase/: build.rs  init.rs  mod.rs  start.rs
mandag/src/router/: into_routes.rs  mod.rs  route.rs  router.rs  routing.rs
