[package]
edition = "2021"
name = "mandag-macros"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
darling = "0.14"
proc-macro-crate = "1"
proc-macro2 = "1"
quote = "1"
router = {git = "https://github.com/kildevaeld/router-rs"}
syn = {version = "1", features = ["full"]}
