[package]
edition = "2021"
name = "mandag-serve"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dale = {git = "https://github.com/kildevaeld/dale-rs"}
dale-http = {git = "https://github.com/kildevaeld/dale-rs", features = ["hyper"]}
hyper = {version = "0.14", features = ["server", "http1", "runtime"]}
tokio = {version = "1", features = []}

pin-project-lite = "0.2"
