[package]
name = "mandag-tera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = { version = "1"}
mandag-core = { path = "../mandag-core"}
serde = { version = "1", features = ["derive"]}
relative-path = {version  = "1", features = ["serde"]}