[package]
edition = "2021"
name = "mandag"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
serde = ["dale-http/json", "dale-http/qs"]

[dependencies]
dale = { git = "https://github.com/kildevaeld/dale-rs", features = ["alloc"] }
dale-extensions = { git = "https://github.com/kildevaeld/dale-rs", features = [
    "http",
] }
dale-http = { git = "https://github.com/kildevaeld/dale-rs", features = [
    "router",
] }
johnfig = { git = "https://github.com/kildevaeld/johnfig-rs", features = [] }
router = { git = "https://github.com/kildevaeld/router-rs", features = [] }

http = "0.2"
mandag-core = { path = "../mandag-core" }
mandag-macros = { path = "../mandag-macros" }
mandag-serve = { path = "../mandag-serve" }

tokio = { version = "1", features = ["rt"] }

toback = { git = "https://github.com/kildevaeld/toback-rs", features = [
    "send",
] }

parking_lot = "0.12"
pin-project-lite = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"]}
mandag-tera = { path = "../mandag-tera"}


[[example]]
name = "todos"
path = "examples/todo/main.rs"
required-features = ["serde"]